Fixed time-ago spacing issue

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -164,11 +164,13 @@ p {
   color: #365899;
   list-style: none;
   float: left;
+  width: 600px;
 }
 
 .time-ago {
   font-size: .9em;
   color: #90949c;
+  width: 550;
 }
 
 .like-button {
@@ -218,6 +220,7 @@ p {
 .profile-details {
   display: table-cell; 
   vertical-align: top;
+  padding-left: 5px;
 }
 
 .profile-details-wrapper {
